--- a/10-understanding-statistical-control.Rmd
+++ b/10-understanding-statistical-control.Rmd
@@ -102,21 +102,21 @@ Table 2 shows the results from fitting a series of models to examine the effect 
 
 ```{r}
 # Simple regression model to examine effect of time spent on homework
-lm.1 = lm(gpa ~ 1 + homework, data = keith)
-#glance(lm.1)
-#tidy(lm.1)
+lm.a = lm(gpa ~ 1 + homework, data = keith)
+#glance(lm.a)
+#tidy(lm.a)
 
 # Control for parent education level
-lm.2 = lm(gpa ~ 1 + homework + parent_ed, data = keith)
-#glance(lm.2)
-#tidy(lm.2)
+lm.b = lm(gpa ~ 1 + homework + parent_ed, data = keith)
+#glance(lm.b)
+#tidy(lm.b)
 ```
 
 
 ```{r, echo=FALSE, eval=FALSE}
 library(stargazer)
 
-stargazer(lm.1, lm.2,
+stargazer(lm.a, lm.b,
   column.labels = c("Model 1", "Model 2"),
   covariate.labels = c("Time spent on homework", "Parent education level"),
   dep.var.caption = "Outcome variable: GPA (on a 100-pt. scale)",
